regression_test_report_20250615_235219.txt
回归测试报告 - 2025-06-15 23:52:19
============================================================

Shell配置测试: PASS

Zsh连接测试: PASS

配置文件语法检查: FAIL
  错误: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/xuyehua/Code/remote-terminal-mcp/enhanced_config_manager.py", line 783
    updated_docker_configs = self.get_existing_docker_configs()
    ^
IndentationError: expected an indented block


MCP服务器语法检查: FAIL
  错误: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/xuyehua/Code/remote-terminal-mcp/python/mcp_server.py", line 21, in <module>
    from enhanced_config_manager import EnhancedConfigManager
  File "/Users/xuyehua/Code/remote-terminal-mcp/enhanced_config_manager.py", line 783
    updated_docker_configs = self.get_existing_docker_configs()
    ^
IndentationError: expected an indented block


